--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
     "react-highcharts": "^8.4.1",
+    "react-keydown": "^1.6.5",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-throttle-render": "^1.2.0",
