--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clone": "^1.0.2",
     "combine-section-reducers": "^1.0.4",
     "jsondiffpatch": "^0.2.4",
+    "lodash.debounce": "^4.0.8",
     "material-ui": "^0.15.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
