--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "babel-polyfill": "^6.8.0",
     "clone": "^1.0.2",
     "combine-section-reducers": "^1.0.4",
+    "datauri-download": "^0.1.3",
     "jsondiffpatch": "^0.2.4",
     "lodash.debounce": "^4.0.8",
     "material-ui": "^0.15.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.1",
+    "react": "~15.0.0",
+    "react-dom": "~15.0.0",
     "react-highcharts": "^8.4.1",
     "react-keydown": "^1.6.5",
     "react-redux": "^4.4.5",
