--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux-act": "^1.0.0",
     "redux-actions": "^0.10.0",
     "redux-logger": "^2.6.1",
-    "redux-saga": "^0.10.4"
+    "redux-saga": "^0.10.4",
+    "xee-components": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
