--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clone": "^1.0.2",
     "combine-section-reducers": "^1.0.4",
     "datauri-download": "^0.1.3",
+    "json-loader": "^0.5.7",
     "jsondiffpatch": "^0.2.4",
     "lodash.debounce": "^4.0.8",
     "material-ui": "^0.15.1",
