--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "json-loader": "^0.5.7",
     "jsondiffpatch": "^0.2.4",
     "lodash.debounce": "^4.0.8",
-    "material-ui": "^0.15.1",
-    "react": "~15.0.0",
-    "react-dom": "~15.0.0",
+    "material-ui": "^0.15.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-highcharts": "^8.4.1",
     "react-keydown": "^1.6.5",
     "react-redux": "^4.4.5",
