--- a/package.json
+++ b/package.json
@@ -4,35 +4,38 @@
   "main": "host.js",
   "author": "",
   "dependencies": {
-    "babel-loader": "^6.2.5",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-polyfill": "^6.8.0",
-    "clone": "^1.0.2",
+    "clone": "^2.1.1",
     "combine-section-reducers": "^1.0.4",
     "datauri-download": "^0.1.3",
     "json-loader": "^0.5.7",
-    "jsondiffpatch": "^0.2.4",
+    "jsondiffpatch": "^0.2.5",
     "lodash.debounce": "^4.0.8",
-    "material-ui": "^0.15.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-highcharts": "^8.4.1",
+    "material-ui": "^0.20.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-highcharts": "^15.0.0",
     "react-keydown": "^1.6.5",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.6",
     "react-swipeable-views": "^0.12.8",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-throttle-render": "^1.2.0",
+    "react-tap-event-plugin": "^3.0.2",
+    "react-throttle-render": "^2.0.0",
     "redux": "^3.5.2",
     "redux-act": "^1.0.0",
-    "redux-actions": "^0.10.0",
-    "redux-logger": "^2.6.1",
-    "redux-saga": "^0.10.4",
+    "redux-actions": "^2.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "xee-components": "^1.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "webpack": "^1.13.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "build:dev": "webpack",
