--- a/package.json
+++ b/package.json
@@ -4,35 +4,33 @@
   "main": "host.js",
   "author": "",
   "dependencies": {
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.8.0",
-    "clone": "^1.0.2",
-    "combine-section-reducers": "^1.0.4",
+    "@babel/core": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "clone": "^2.1.2",
+    "combine-section-reducers": "^1.0.6",
     "datauri-download": "^0.1.3",
-    "json-loader": "^0.5.7",
     "jsondiffpatch": "^0.3.11",
-    "lodash.debounce": "^4.0.8",
-    "material-ui": "^0.15.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-highcharts": "^8.4.1",
-    "react-keydown": "^1.6.5",
-    "react-redux": "^4.4.5",
-    "react-swipeable-views": "^0.12.8",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-throttle-render": "^1.2.0",
-    "redux": "^3.5.2",
-    "redux-act": "^1.0.0",
-    "redux-actions": "^0.10.0",
-    "redux-logger": "^2.6.1",
-    "redux-saga": "^0.10.4",
+    "material-ui": "0.19.4",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
+    "react-highcharts": "^16.0.2",
+    "react-keydown": "^1.9.7",
+    "react-redux": "^5.0.7",
+    "react-swipeable-views": "0.11.2",
+    "react-throttle-render": "1.2.0",
+    "reduce-reducers": "^0.4.3",
+    "redux": "^4.0.0",
+    "redux-act": "^1.7.4",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
     "xee-components": "^1.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "webpack": "^1.13.0"
+    "babel-loader": "^8.0.2",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "build:dev": "webpack",
